--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1293,23 +1293,147 @@ color: #6A7C92;
   color: #ec1946;
 }
 
-.about-social .about-social-content .about-social-img img {
-width: 100%;
-padding: 0;
-margin-left: 12px;
-} 
+--
 
-.about-social .about-social-content .about-social-title h4 {
-  font-size: 36px;
-  color: #262626;
-  font-weight: 600;
+@media (max-width: 767px) {
+  .solution-section {
+    padding: 120px 0;
+}
 }
 
-.about-social .about-social-content .about-social-title p {
-padding-top: 20px;
-color: #6A7C92;
+.solution-section {
+    position: relative;
 }
 
+@media (max-width: 767px){
+
+.solution-title span {
+    font-size: 20px;
+  }
+}
+
+.solution-title span {
+    font-size: 24px;
+    font-weight: 600;
+    color: #ec1946;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 767px)
+{
+  .solution-title h2 {
+    line-height: 41px;
+}
+}
+
+.solution-title h2 {
+    font-weight: 600;
+    margin-bottom: 15px;
+    color: #262626;
+    padding-left: 20px;
+    width: 94%;
+}
+
+.solution-content p {
+    color: #262626;
+    padding-left: 20px;
+    
+}
+
+.solution-section .solution-img-wrapper {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 40%;
+    transform: translateY(-38%);
+}
+
+@media (max-width: 767px) {
+  .solution-section .solution-img-wrapper {
+    position: relative;
+    top: 0;
+    transform: translateY(0);
+    width: 100%;
+    margin-bottom: 50px;
+    right: 0;
+}
+
+}
+
+.solution-section .solution-img-wrapper img {
+    width: 100%;
+}
+
+--
+
+@media (max-width: 767px) {
+  .social-section {
+    padding: 120px 0;
+}
+}
+
+.social-section {
+    position: relative;
+}
+
+@media (max-width: 767px){
+
+.social-title span {
+    font-size: 20px;
+  }
+}
+
+.social-title span {
+    font-size: 24px;
+    font-weight: 600;
+    color: #ec1946;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 767px)
+{
+  .social-title h2 {
+    line-height: 41px;
+}
+}
+
+.social-title h2 {
+    font-weight: 600;
+    margin-bottom: 15px;
+    color: #262626;
+    padding-left: 20px;
+    width: 94%;
+}
+
+.social-content p {
+    color: #262626;
+    padding-left: 20px;
+    
+}
+
+.social-section .social-img-wrapper {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 46%;
+    transform: translateY(-67%);
+}
+
+@media (max-width: 767px) {
+  .social-section .social-img-wrapper {
+    position: relative;
+    top: 0;
+    transform: translateY(0);
+    width: 100%;
+    margin-bottom: 50px;
+    right: 0;
+}
+
+}
+
+.social-section .social-img-wrapper img {
+    width: 100%;
+}
 /*===========================
    Pricing
 ===========================*/
